# activation-writing

./: .gitignore  Activation-Writing-5.5-Pro-Request.md  MODAL.md  PRO_RESEARCH_HANDOFF.md  RAW_PAYLOAD_ANATOMY_2026-05-25.md  README.md  RESEARCH_LOG.md  pyproject.toml  requirements.txt
.github/workflows/: modal-benchmark.yml
caic/: __init__.py  baseline_runner.py  baselines.py  contrastive_gate.py  evaluation.py  experiment.py  intrinsic_surprise.py  memory.py  modeling.py  synthetic.py  tsoc.py
docs/: qwen35_benchmark_targets.md
scripts/: analyze_eval_alignment.py  attention_source_write.py  build_context_learning_benchmark.py  build_minilang_teacher_gated.py  cloud_modal.py  continual_benchmark_grid.py  download_qwen35_targets.py  evaluate_context_learning_benchmark.py  joint_attention_mlp_write.py  key_separability.py  minilang_audit_saved.py  minilang_continual_triangle.py  minilang_intrinsic_continual.py  minilang_lora_baseline.py  minilang_write.py  modal_caic_runner.py  modal_minilang_audit.py  modal_smoke.py  profile_intrinsic_continual.py  qk_source_write.py  residual_operator_write.py  residual_readout_sweep.py  run_context_benchmark_raw_write.py  run_stage1.sh  run_stage1_baselines.sh  screen_minilang_splits.py  screen_raw_minilang_splits.py  summarize_continual_run.py  sweep_layers_windows.sh  target_patch_sweep.py  tsoc_component_combo_search.py  tsoc_component_sweep.py  tsoc_source_write.py
tests/: test_contrastive_gate.py  test_intrinsic_surprise.py  test_memory.py  test_minilang.py  test_synthetic.py  test_tsoc.py
(+38 files in other folders)
